Agregados efectos hover a iconos de redes sociales

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -177,7 +177,7 @@
       </div>
       <div class="col-lg-4 col-md-4 mx-auto">
         <ul class="list-inline text-center">
-          <li class="list-inline-item">
+          <li class="list-inline-item twitter">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -185,7 +185,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item facebook">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -193,7 +193,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item instagram">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
