--- a/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
@@ -299,7 +299,7 @@
       </div>
       <div class="col-lg-4 col-md-4 mx-auto">
         <ul class="list-inline text-center">
-          <li class="list-inline-item">
+          <li class="list-inline-item twitter">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -307,7 +307,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item facebook">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -315,7 +315,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item instagram">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
