--- a/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
@@ -80,7 +80,7 @@
           <h1>Regístrate</h1>
         </div>
         <ul class="list-inline text-center">
-          <li class="list-inline-item">
+          <li class="list-inline-item facebook">
             <a href="#" class="circle-icon facebook_icon">
               <img width="30" height="30" src="img/facebook.png" alt="ícono de facebook">
             </a>
