--- a/Plantilla/startbootstrap-clean-blog-gh-pages/noticia.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/noticia.html
@@ -135,7 +135,7 @@
       </div>
       <div class="col-lg-4 col-md-4 mx-auto">
         <ul class="list-inline text-center">
-          <li class="list-inline-item">
+          <li class="list-inline-item twitter">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -143,7 +143,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item facebook">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -151,7 +151,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item instagram">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
