--- a/Plantilla/startbootstrap-clean-blog-gh-pages/noticias.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/noticias.html
@@ -140,7 +140,7 @@
       </div>
       <div class="col-lg-4 col-md-4 mx-auto">
         <ul class="list-inline text-center">
-          <li class="list-inline-item">
+          <li class="list-inline-item twitter">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -148,7 +148,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item facebook">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -156,7 +156,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item instagram">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
