--- a/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
@@ -235,7 +235,7 @@
       </div>
       <div class="col-lg-4 col-md-4 mx-auto">
         <ul class="list-inline text-center">
-          <li class="list-inline-item">
+          <li class="list-inline-item twitter">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -243,7 +243,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item facebook">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -251,7 +251,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item instagram">
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
