--- a/Plantilla/startbootstrap-clean-blog-gh-pages/noticia.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/noticia.html
@@ -91,7 +91,7 @@
   </div>
   <br>
 
-  <section class="recipe-steps">
+  <div class="recipe-steps">
     <div class="steps-container-center">
       <div id="articleBody" class="pasos-a-seguir col-lg-11 col-sm-10">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lorem libero, aliquam quis auctor scelerisque, sollicitudin mattis leo. Sed aliquet mauris a lorem suscipit, sed vulputate ante blandit. Phasellus eget diam nulla. Aliquam dictum iaculis purus sit amet egestas. Donec pulvinar massa imperdiet nisl ornare, et bibendum eros maximus. Sed nec enim luctus, consectetur metus ac, egestas ligula. Cras bibendum neque sit amet posuere efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque fermentum quis tellus ac ultricies. Pellentesque accumsan dictum felis vitae placerat. Donec convallis enim tellus. Donec tempus tellus nec arcu lacinia, ac auctor mauris euismod. Suspendisse potenti. </p>
@@ -100,7 +100,7 @@
         <p>Clark Kent, 12/3/2020</p>
       </div>
     </div>
-  </section>
+  </div>
   <!--recipe section-->
 
 
