--- a/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
@@ -132,7 +132,7 @@
   </div>
   <br>
 
-  <section class="recipe-steps">
+  <div class="recipe-steps">
     <div class="steps-container-center">
       <div class="pasos-a-seguir col-lg-6 col-md-12">
         <div class="pasos-a-seguir-title">
@@ -200,7 +200,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
   <!--recipe section-->
 
 
