--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -95,7 +95,7 @@
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Apellido</label>
-              <input type="text" id="name" required data-validation-required-message="Por favor ingresa tu apellido.">
+              <input type="text" id="middlename" required data-validation-required-message="Por favor ingresa tu apellido.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -116,7 +116,7 @@
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label for="lugar">País de nacimiento:</label>
-              <select name="lugar" id="lugar" required>
+              <select name="lugar" id="lugar">
               </select>
               <p class="help-block text-danger"></p>
             </div>
@@ -138,7 +138,7 @@
     </div>
     <div class="row inner_pad">
       <div class="col-sm-12 mx-auto text-center map-responsive">
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1yErDFAJoV0o-j5xNbJOhK_O-UlZFt-O6" width="640" height="480" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1yErDFAJoV0o-j5xNbJOhK_O-UlZFt-O6" width="640" height="480" allowfullscreen></iframe>
       </div>
     </div>
   </div>
