Aprobación de W3C del lado del admin

--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/index.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0;url=dist/index.html">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0">
     <title>SB Admin</title>
-    <script language="javascript">
+    <script>
         window.location.href = "dist/index.html"
     </script>
 </head>
