arreglando links de admin

--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/aqui estan todas las paginas del admin/401.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/aqui estan todas las paginas del admin/401.html
@@ -21,7 +21,7 @@
                                     <h1 class="display-1">401</h1>
                                     <p class="lead">Sin autorización</p>
                                     <p>Acceso Denegado.</p>
-                                    <a href="index.html">
+                                    <a href="admin.html">
                                         <i class="fas fa-arrow-left mr-1"></i>
                                         Regresar al Dashboard
                                     </a>
