--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/aqui estan todas las paginas del admin/404.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/aqui estan todas las paginas del admin/404.html
@@ -20,7 +20,7 @@
                                 <div class="text-center mt-4">
                                     <img class="mb-4 img-error" src="assets/img/error-404-monochrome.svg" />
                                     <p class="lead">El URL no fue encontrado en este servidor.</p>
-                                    <a href="index.html">
+                                    <a href="admin.html">
                                         <i class="fas fa-arrow-left mr-1"></i>
                                         Regresar al Dashboard
                                     </a>
