--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -80,7 +80,7 @@
       <div class="col-lg-6 col-md-12 mx-auto" id="firstCol">
       	<div>
 	      	<h1 class="margin_bot">Contáctanos</h1>
-	        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+	        <p>Quieres contactarte con nosotros? Llena el formulario y te responderemos lo más rápido</p>
 	    </div>
       </div>
       <div class="col-lg-6 col-md-12 mx-auto" id="secondCol">
