--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/aqui estan todas las paginas del admin/charts.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/aqui estan todas las paginas del admin/charts.html
@@ -93,7 +93,7 @@
                     <div class="container-fluid">
                         <h1 class="mt-4">Gráficos</h1>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                            <li class="breadcrumb-item"><a href="admin.html">Dashboard</a></li>
                             <li class="breadcrumb-item active">Gráficos</li>
                         </ol>
                         <div class="card mb-4">
