--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/index.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="refresh" content="0">
     <title>SB Admin</title>
     <script>
-        window.location.href = "dist/index.html"
+        window.location.href = "admin/admin.html"
     </script>
 </head>
 
 <body>
-    Go to <a href="dist/index.html">/dist/index.html</a>
+    Go to <a href="admin/admin.html">/admin/admin.html</a>
 </body>
 
 </html>
