tutorial guiado update

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/postViejo.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/postViejo.html
@@ -118,43 +118,67 @@
 
   <hr>
 
+
   <!-- Footer -->
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+    <div class="actual-footer">
+      <div class="first-half col-lg-3 col-md-3">
+        <div class="nav-options col-md-12">
+          <span><a href="index.html">Sabores Compartidos</a></span>
+          <span><a href="noticias.html">Noticias</a></span>
+          <span><a href="recetas.html">Recetas</a></span>
+          <span><a href="contact.html">Contáctanos</a></span>
+          <span><a href="about.html">Quiénes somos</a></span>
+        </div>
+        <!-- <div class="other-options col-md-4">
+          <span>Blog</span>
+          <span>Search</span>
+          <span>T & Cs</span>
+          <span>Privacy</span>
+          <span>Community</span>
+        </div> -->
+      </div>
+      <div class="second-half col-lg-6 col-md-6">
+        <div class="get-our-newsletter">
+          <span>Suscribete</span>
+        </div>
+
+        <div class="email-form">
+          <input type="text" placeholder="Ingresa tu email">
+          <button id='subscribe-btn'>Suscribirme</button>
         </div>
       </div>
+      <div class="col-lg-3 col-md-3 mx-auto">
+        <ul class="list-inline text-center">
+          <li class="list-inline-item twitter">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item facebook">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item instagram">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+        </ul>
+        <p class="copyright text-muted" id="copyright">Copyright &copy; Sabores Compartidos 2020</p>
+      </div>
     </div>
-  </footer>
-
+</footer>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
