--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -147,26 +147,27 @@
   <hr>
 
 
+
   <!-- Footer -->
-  <footer>
+<footer>
     <div class="actual-footer">
-      <div class="first-half col-lg-4 col-md-4">
-        <div class="nav-options col-md-4">
-          <span>Home</span>
-          <span>About</span>
-          <span>Features</span>
-          <span>Pricing</span>
-          <span>Contact us</span>
+      <div class="first-half col-lg-3 col-md-3">
+        <div class="nav-options col-md-12">
+          <span><a href="index.html">Sabores Compartidos</a></span>
+          <span><a href="noticias.html">Noticias</a></span>
+          <span><a href="recetas.html">Recetas</a></span>
+          <span><a href="contact.html">Contáctanos</a></span>
+          <span><a href="about.html">Quiénes somos</a></span>
         </div>
-        <div class="other-options col-md-4">
+        <!-- <div class="other-options col-md-4">
           <span>Blog</span>
           <span>Search</span>
           <span>T & Cs</span>
           <span>Privacy</span>
           <span>Community</span>
-        </div>
+        </div> -->
       </div>
-      <div class="second-half col-lg-4 col-md-4">
+      <div class="second-half col-lg-6 col-md-6">
         <div class="get-our-newsletter">
           <span>Suscribete</span>
         </div>
@@ -176,7 +177,7 @@
           <button id='subscribe-btn'>Suscribirme</button>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 mx-auto">
+      <div class="col-lg-3 col-md-3 mx-auto">
         <ul class="list-inline text-center">
           <li class="list-inline-item twitter">
             <a href="#">
@@ -203,7 +204,7 @@
             </a>
           </li>
         </ul>
-        <p class="copyright text-muted" id="copyright">Copyright &copy; Your Website 2020</p>
+        <p class="copyright text-muted" id="copyright">Copyright &copy; Sabores Compartidos 2020</p>
       </div>
     </div>
 </footer>
