--- a/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
@@ -43,13 +43,13 @@
           <li class="nav-item" data-step='2' data-intro="En esta página podrás enterarte de las últimas noticias y recetas añadidas">
             <a class="nav-op" href="noticias.html">Noticias</a>
           </li>
-          <li class="nav-item" data-step='3' data-intro="En este menú podrás observar y filtrar las recetas disponibles">
+          <li class="nav-item" >
             <a class="nav-op" href="recetas.html">Recetas</a>
           </li>
-          <li class="nav-item" data-step='4' data-intro="Aqui podrás ponerte en contacto con nosotros">
+          <li class="nav-item">
             <a class="nav-op" href="contact.html" >Contáctanos</a>
           </li>
-          <li class="nav-item" data-step='5' data-intro="Aquí podras ver una breve descripción de nuestro equipo">
+          <li class="nav-item">
             <a class="nav-op" href="about.html" >Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
@@ -105,13 +105,14 @@
 
       </div>
       <!-- /.col-lg-3 -->
-
-      <div class="col-lg-9" data-step='6' data-intro="En esta sección puedes ver un listado de las recetas disponibles" data-position="left">
+      <!-- data-step='6' data-intro="En esta sección puedes ver un listado de las recetas disponibles" data-position="left" -->
+      <div class="col-lg-9" >
         <div class="row">
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="receta.html" data-step='7' data-intro="Al dar click en la miniatura podrás ver una descripción más detallada de la receta"><img class="card-img-top" src="img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
+              <!-- data-step='7' data-intro="Al dar click en la miniatura podrás ver una descripción más detallada de la receta" -->
+              <a href="receta.html" ><img class="card-img-top" src="img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Chana Masala</a>
@@ -268,26 +269,27 @@
       </div>
 
 
+
   <!-- Footer -->
-  <footer>
+<footer>
     <div class="actual-footer">
-      <div class="first-half col-lg-4 col-md-4">
-        <div class="nav-options col-md-4">
-          <span>Home</span>
-          <span>About</span>
-          <span>Features</span>
-          <span>Pricing</span>
-          <span>Contact us</span>
+      <div class="first-half col-lg-3 col-md-3">
+        <div class="nav-options col-md-12">
+          <span><a href="index.html">Sabores Compartidos</a></span>
+          <span><a href="noticias.html">Noticias</a></span>
+          <span><a href="recetas.html">Recetas</a></span>
+          <span><a href="contact.html">Contáctanos</a></span>
+          <span><a href="about.html">Quiénes somos</a></span>
         </div>
-        <div class="other-options col-md-4">
+        <!-- <div class="other-options col-md-4">
           <span>Blog</span>
           <span>Search</span>
           <span>T & Cs</span>
           <span>Privacy</span>
           <span>Community</span>
-        </div>
+        </div> -->
       </div>
-      <div class="second-half col-lg-4 col-md-4">
+      <div class="second-half col-lg-6 col-md-6">
         <div class="get-our-newsletter">
           <span>Suscribete</span>
         </div>
@@ -297,7 +299,7 @@
           <button id='subscribe-btn'>Suscribirme</button>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 mx-auto">
+      <div class="col-lg-3 col-md-3 mx-auto">
         <ul class="list-inline text-center">
           <li class="list-inline-item twitter">
             <a href="#">
@@ -324,11 +326,10 @@
             </a>
           </li>
         </ul>
-        <p class="copyright text-muted" id="copyright">Copyright &copy; Your Website 2020</p>
+        <p class="copyright text-muted" id="copyright">Copyright &copy; Sabores Compartidos 2020</p>
       </div>
     </div>
 </footer>
-
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -342,7 +343,7 @@
 
   <!-- IntroJS CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/3.1.0/intro.min.js"></script>
-  <script src="js/introjs.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 
