Validación de W3C del lado del admin

--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/admin/404.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/admin/404.html
@@ -18,7 +18,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-6">
                                 <div class="text-center mt-4">
-                                    <img class="mb-4 img-error" src="assets/img/error-404-monochrome.svg" />
+                                    <img class="mb-4 img-error" src="assets/img/error-404-monochrome.svg" alt="No válido">
                                     <p class="lead">El URL no fue encontrado en este servidor.</p>
                                     <a href="admin.html">
                                         <i class="fas fa-arrow-left mr-1"></i>
