--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/admin/charts.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/admin/charts.html
@@ -13,7 +13,7 @@
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <a class="navbar-brand" href="admin.html">Sabor Compartido</a>
-            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
+            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
             </form>
@@ -44,13 +44,13 @@
                                 Paginas
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
-                            <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-parent="#sidenavAccordion">
+                            <div class="collapse" id="collapsePages"  data-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
                                         Autenticación
                                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                     </a>
-                                    <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
+                                    <div class="collapse" id="pagesCollapseAuth"  data-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
                                             <a class="nav-link" href="login.html">Iniciar Sesión</a>
                                             <a class="nav-link" href="register.html">Registrarse</a>
@@ -61,7 +61,7 @@
                                         Error
                                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                     </a>
-                                    <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
+                                    <div class="collapse" id="pagesCollapseError"  data-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
                                             <a class="nav-link" href="401.html">Pagina 401</a>
                                             <a class="nav-link" href="404.html">Pagina 404</a>
@@ -101,7 +101,7 @@
                                 <i class="fas fa-chart-area mr-1"></i>
                                 Numero de visitas.
                             </div>
-                            <div class="card-body"><canvas id="myAreaChart" width="100%" height="30"></canvas></div>
+                            <div class="card-body"><canvas id="myAreaChart" width="100" height="30"></canvas></div>
                             <div class="card-footer small text-muted">Actualizado ayer a las 11:59 PM</div>
                         </div>
                         <div class="row">
@@ -111,7 +111,7 @@
                                         <i class="fas fa-chart-bar mr-1"></i>
                                         Numero de nuevos usuarios por mes.
                                     </div>
-                                    <div class="card-body"><canvas id="myBarChart" width="100%" height="50"></canvas></div>
+                                    <div class="card-body"><canvas id="myBarChart" width="100" height="50"></canvas></div>
                                     <div class="card-footer small text-muted">Actualizado ayer a las 11:59 PM</div>
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                                         <i class="fas fa-chart-pie mr-1"></i>
                                         Browsers de los usuarios
                                     </div>
-                                    <div class="card-body"><canvas id="myPieChart" width="100%" height="50"></canvas></div>
+                                    <div class="card-body"><canvas id="myPieChart" width="100" height="50"></canvas></div>
                                     <div class="card-footer small text-muted">Actualizado ayer a las 11:59 PM</div>
                                 </div>
                             </div>
