--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/admin/register.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/admin/register.html
@@ -37,7 +37,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <label class="small mb-1" for="inputEmailAddress">Email</label>
-                                                <input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Ingrese su email" />
+                                                <input class="form-control py-4" id="inputEmailAddress" type="email"  placeholder="Ingrese su email" />
                                             </div>
                                             <div class="form-row">
                                                 <div class="col-md-6">
