styles & introjs update

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
@@ -31,8 +31,8 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light" data-intro='Bienvenido a Sabores Compartidos'>
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light" id="navbar-container" data-intro='Bienvenido a Sabores Compartidos'>
+    <div class="navcontainer" >
       <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -61,7 +61,7 @@
         </ul>
       </div>
       <div id="nav-right" class="collapse navbar-collapse">
-		<form>
+		<form id="searchform">
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="recetas.html">
