--- a/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
@@ -32,8 +32,8 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light" data-intro='Bienvenido a Sabores Compartidos'>
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light" id="navbar-container" >
+    <div class="navcontainer" >
       <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -41,16 +41,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
-          <li class="nav-item" data-step='2' data-intro="En esta página podrás enterarte de las últimas noticias y recetas añadidas">
+          <li class="nav-item" >
             <a class="nav-op" href="noticias.html">Noticias</a>
           </li>
-          <li class="nav-item" data-step='3' data-intro="En este menú podrás observar y filtrar las recetas disponibles">
+          <li class="nav-item" >
             <a class="nav-op" href="recetas.html">Recetas</a>
           </li>
-          <li class="nav-item" data-step='4' data-intro="Aqui podrás ponerte en contacto con nosotros">
+          <li class="nav-item">
             <a class="nav-op" href="contact.html" >Contáctanos</a>
           </li>
-          <li class="nav-item" data-step='5' data-intro="Aquí podras ver una breve descripción de nuestro equipo">
+          <li class="nav-item">
             <a class="nav-op" href="about.html" >Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
@@ -62,7 +62,7 @@
         </ul>
       </div>
       <div id="nav-right" class="collapse navbar-collapse">
-		<form>
+		<form id="searchform">
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="recetas.html">
@@ -75,7 +75,6 @@
       </div>
     </div>
   </nav>
-
   <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/food_about_bg.jpg')">
     <div class="overlay"></div>
