--- a/Plantilla/startbootstrap-clean-blog-gh-pages/noticia.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/noticia.html
@@ -34,8 +34,8 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light" >
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light" id="navbar-container">
+    <div class="navcontainer" >
       <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -43,16 +43,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
-          <li class="nav-item" >
+          <li class="nav-item">
             <a class="nav-op" href="noticias.html">Noticias</a>
           </li>
-          <li class="nav-item" data-step='2' data-intro="En este menú podrás observar y filtrar las recetas disponibles">
+          <li class="nav-item" data-step='2' data-intro="En esta página podrás enterarte de las últimas noticias y recetas añadidas">
             <a class="nav-op" href="recetas.html">Recetas</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="contact.html" >Contáctanos</a>
           </li>
-          <li class="nav-item" >
+          <li class="nav-item">
             <a class="nav-op" href="about.html" >Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
@@ -64,7 +64,7 @@
         </ul>
       </div>
       <div id="nav-right" class="collapse navbar-collapse">
-		<form>
+		<form id="searchform">
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="recetas.html">
@@ -82,7 +82,7 @@
   <!--image-->
   <br>
   <div class="main-container">
-    <div class="recipe-description-container" data-position="right" data-intro="Detalle de la noticia">
+    <div class="recipe-description-container" data-intro="Detalle de la noticia" data-position="right">
       <div class="pasos-a-seguir-title">
         <h2 id="ArtTitle" >Nuevas reseñas con chefs</h2>
         <p id="ArtSubtitle" class="steps-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae felis nisl. Nam eu dignissim eros. Phasellus congue dolor nisl, in ultrices est vehicula a.</p>
