--- a/Plantilla/startbootstrap-clean-blog-gh-pages/noticias.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/noticias.html
@@ -34,8 +34,8 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light" id="navbar-container">
+    <div class="navcontainer" >
       <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -43,16 +43,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
-          <li class="nav-item" >
+          <li class="nav-item">
             <a class="nav-op" href="noticias.html">Noticias</a>
           </li>
           <li class="nav-item" >
             <a class="nav-op" href="recetas.html">Recetas</a>
           </li>
-          <li class="nav-item" >
+          <li class="nav-item">
             <a class="nav-op" href="contact.html" >Contáctanos</a>
           </li>
-          <li class="nav-item" >
+          <li class="nav-item">
             <a class="nav-op" href="about.html" >Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
@@ -64,7 +64,7 @@
         </ul>
       </div>
       <div id="nav-right" class="collapse navbar-collapse">
-		<form>
+		<form id="searchform">
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="recetas.html">
@@ -82,10 +82,10 @@
   <!-- Main Content -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto"data-intro="Se muestra un lista de las noticas más recientes" >
+      <div class="col-lg-8 col-md-10 mx-auto" data-intro="Se muestra un lista de las noticas más recientes" data-position="top">
         <h1 >Últimas novedades</h1>
         <div class="imagegrid-container-full col-lg-12 col-md-10 mx-auto" >
-          <a href="noticia.html" data-step='2' data-intro="Al dar click podrás ver un detalle mas amplio de la noticia">
+          <a href="noticia.html" data-step='2' data-intro="Al dar click podrás ver un detalle mas amplio de la noticia" data-position="top">
             <div class="teamCont">
               <img src="img/chef_news.webp" alt="noticia_chef">
               <div class="teamtxt">
