--- a/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
@@ -27,13 +27,16 @@
   <link href="css/clean-blog.min.css" rel="stylesheet">
   <link href="css/homepage.css" rel="stylesheet">
   <link href="css/recipe.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/3.1.0/introjs-rtl.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/3.1.0/introjs.min.css">
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light" id="navbar-container" >
+    <div class="navcontainer" >
       <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -41,20 +44,20 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <li class="nav-item" >
             <a class="nav-op" href="noticias.html">Noticias</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" >
             <a class="nav-op" href="recetas.html">Recetas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-op" href="contact.html">Contáctanos</a>
+            <a class="nav-op" href="contact.html" data-step='3' data-intro="Aquí podrás ponerte en contacto con nostros">Contáctanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="about.html" data-step='4' data-intro="En este menú podras ver una breve descripcion de nuestro equipo">Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
             <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-op" href="about.html">Quienes somos</a>
           </li>
           <li class="nav-item IniRegNav">
             <a class="nav-op" href="registro.html">Registro</a>
@@ -62,11 +65,11 @@
         </ul>
       </div>
       <div id="nav-right" class="collapse navbar-collapse">
-		<form>
+		<form id="searchform">
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="recetas.html">
-        <i class="fas fa-search"></i> 
+      <i class="fas fa-search"></i> 
   		</a>
       	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
@@ -80,7 +83,7 @@
   <!--image-->
   <br>
   <div class="main-container">
-    <div class="recipe-description-container">
+    <div class="recipe-description-container" data-intro="Detalles de la receta" data-position="auto">
         <div class="image-container">
           <img src = "img/pancake.jpeg" alt="pancake de arándanos">
         </div>
@@ -132,8 +135,8 @@
   </div>
   <br>
 
-  <div class="recipe-steps">
-    <div class="steps-container-center">
+  <div class="recipe-steps" >
+    <div class="steps-container-center" data-step="2" data-intro="Incluso los pasos e ingredientes" data-position="auto">
       <div class="pasos-a-seguir col-lg-6 col-md-12">
         <div class="pasos-a-seguir-title">
           <span class="steps-title">Pasos a seguir</span>
@@ -275,6 +278,10 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/clean-blog.min.js"></script>
+
+    <!-- IntroJS CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/3.1.0/intro.min.js"></script>
+    <script src="js/receta.js"></script>
 
 </body>
 
