--- a/Plantilla/startbootstrap-clean-blog-gh-pages/recetas.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/recetas.html
@@ -31,51 +31,50 @@
 </head>
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-op" href="noticias.html">Noticias</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-op" href="recetas.html">Recetas</a>
-            </li>
-            <li class="nav-item" >
-              <a class="nav-op" href="contact.html" >Contáctanos</a>
-            </li>
-            <li class="nav-item" >
-              <a class="nav-op" href="about.html" >Quiénes somos</a>
-            </li>
-            <li class="nav-item IniRegNav">
-              <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
-            </li>
-            <li class="nav-item IniRegNav">
-              <a class="nav-op" href="registro.html">Registro</a>
-            </li>
-          </ul>
-        </div>
-        <div id="nav-right" class="collapse navbar-collapse">
-      <form>
-        <input id="search-bar" type="search" placeholder="Buscar...">
-      </form>
-      <a href="recetas.html">
-        <i class="fas fa-search"></i> 
-        </a>
-          <a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
-          <div id="registro" class="collapse navbar-collapse">
-            <a href="registro.html" class="nav-op red-button button">Registro</a>
-          </div>
-        </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light" id="navbar-container">
+    <div class="navcontainer" >
+      <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item" data-step='2' data-intro="En esta página podrás enterarte de las últimas noticias y recetas añadidas">
+            <a class="nav-op" href="noticias.html">Noticias</a>
+          </li>
+          <li class="nav-item" >
+            <a class="nav-op" href="recetas.html">Recetas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="contact.html" >Contáctanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="about.html" >Quiénes somos</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="registro.html">Registro</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-
+      <div id="nav-right" class="collapse navbar-collapse">
+		<form id="searchform">
+			<input id="search-bar" type="search" placeholder="Buscar...">
+		</form>
+		<a href="recetas.html">
+      <i class="fas fa-search"></i> 
+  		</a>
+      	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
+      	<div id="registro" class="collapse navbar-collapse">
+      		<a href="registro.html" class="nav-op red-button button">Registro</a>
+      	</div>
+      </div>
+    </div>
+  </nav>
     
     <div class="container">
         <div id="myInput" data-intro="Aquí podrás filtrar recetas por nombre y autor. Escribe Chana">
