Mejorado el diseño responsive de la vista de recetas

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
@@ -109,13 +109,12 @@
       <div class="col-lg-9" >
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <!-- data-step='7' data-intro="Al dar click en la miniatura podrás ver una descripción más detallada de la receta" -->
-              <a href="receta.html" ><img class="card-img-top" src="img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
+          <div class="card col-lg-4 col-md-6 mb-4" data-step="2" data-intro="Al dar click en la miniatura podrás ver una descripción más detallada de la receta">
+            <div class="h-100">
+              <a href="receta.html"><img class="card-img-top" src="img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#" class = "recipeName">Chana Masala</a>
+                  <a href="receta.html" class = "recipeName">Chana Masala</a>
                 </h4>
                 <p class="card-text">by John Brown</p>
               </div>
@@ -125,12 +124,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
+          <div class="card col-lg-4 col-md-6 mb-4">
+            <div class=" h-100">
               <a href="receta.html"><img class="card-img-top" src="img/recipeimg/black_bean_burritos.jpg" id = recipeImg alt="Burritos con fréjoles negros"></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#" class = "recipeName">Black Bean Burrito</a>
+                  <a href="receta.html" class = "recipeName">Black Bean Burrito</a>
                 </h4>
                 <p class="card-text">by John Brown</p>
               </div>
@@ -140,12 +139,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/fanesca.jpg" alt="fanesca"></a>
+          <div class="card col-lg-4 col-md-6 mb-4">
+            <div class=" h-100">
+              <a href="receta.html"><img class="card-img-top" src="img/recipeimg/fanesca.jpg" alt="fanesca"></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#" class = "recipeName">Fanesca</a>
+                  <a href="receta.html" class = "recipeName">Fanesca</a>
                 </h4>
                 <p class="card-text">by John Brown</p>
               </div>
@@ -155,12 +154,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/tigrillo.jpg" alt="tigrillo"></a>
+          <div class="card col-lg-4 col-md-6 mb-4">
+            <div class=" h-100">
+              <a href="receta.html"><img class="card-img-top" src="img/recipeimg/tigrillo.jpg" alt="tigrillo"></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#" class = "recipeName">Tigrillo</a>
+                  <a href="receta.html" class = "recipeName">Tigrillo</a>
                 </h4>
                 <p class="card-text">by John Brown</p>
               </div>
@@ -170,12 +169,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/Fritada.jpg" alt="fritada"></a>
+          <div class="card col-lg-4 col-md-6 mb-4">
+            <div class=" h-100">
+              <a href="receta.html"><img class="card-img-top" src="img/recipeimg/Fritada.jpg" alt="fritada"></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#" class = "recipeName">Fritada</a>
+                  <a href="receta.html" class = "recipeName">Fritada</a>
                 </h4>
                 <p class="card-text">by John Brown</p>
               </div>
@@ -185,12 +184,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/easy_jambalaya.jpg" alt="jambalaya"></a>
+          <div class="card col-lg-4 col-md-6 mb-4">
+            <div class=" h-100">
+              <a href="receta.html"><img class="card-img-top" src="img/recipeimg/easy_jambalaya.jpg" alt="jambalaya"></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#" class = "recipeName">Easy Jambalaya</a>
+                  <a href="receta.html" class = "recipeName">Easy Jambalaya</a>
                 </h4>
                 <p class="card-text">by John Brown</p>
               </div>
