receta comment section added to tutorial

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
@@ -51,10 +51,10 @@
             <a class="nav-op" href="recetas.html">Recetas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-op" href="contact.html" data-step='3' data-intro="Aquí podrás ponerte en contacto con nostros">Contáctanos</a>
+            <a class="nav-op" href="contact.html" data-step='4' data-intro="Aquí podrás ponerte en contacto con nostros">Contáctanos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-op" href="about.html" data-step='4' data-intro="En este menú podras ver una breve descripcion de nuestro equipo">Quiénes somos</a>
+            <a class="nav-op" href="about.html" data-step='5' data-intro="En este menú podras ver una breve descripcion de nuestro equipo">Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
             <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
@@ -206,7 +206,7 @@
   </div>
   <!--recipe section-->
 
-  <section class="container">
+  <section class="container" data-step="3" data-intro="En esta sección podras leer y escribir comentarios sobre las recetas" data-position="auto">
     <div class="row">
       <div class="col-12">
         <div class="comments">
@@ -220,7 +220,7 @@
                 </div>
             </span>     
           </div>
-          <div class="comment-box add-comment">
+          <div class="comment-box add-comment" >
             <span class="commenter-pic">
               <i class="far fa-user-circle"></i>
             </span>
