Arreglado el navbar

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/inicio_sesion.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/inicio_sesion.html
@@ -33,7 +33,7 @@
     <div class="container">
       <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
+       
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -49,6 +49,9 @@
           </li>
           <li class="nav-item" data-step='5' data-intro="Aquí podras ver una breve descripción de nuestro equipo">
             <a class="nav-op" href="about.html" >Quiénes somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="nuevareceta.html" >Agregar Receta</a>
           </li>
           <li class="nav-item IniRegNav">
             <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
