Arreglado el navbar

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
@@ -52,7 +52,7 @@
           <li class="nav-item">
             <a class="nav-op" href="about.html" >Quiénes somos</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item nuevaReceta">
             <a class="nav-op" href="nuevareceta.html" >Agregar Receta</a>
           </li>
           <li class="nav-item IniRegNav">
